@@ -69,6 +69,8 @@ tasks {
     // TODO: fix camel instrumentation so that it uses semantic attributes extractors
     jvmArgs("-Dotel.instrumentation.experimental.span-suppression-strategy=span-kind")
 
-    jvmArgs("-Dotel.instrumentation.common.db-statement-sanitizer.enabled=true")
+    // required on jdk17
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+    jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
   }
 }
