@@ -37,5 +37,8 @@ dependencies {
 tasks.withType<Test>().configureEach {
   // TODO run tests both with and without experimental span attributes
   jvmArgs("-Dotel.instrumentation.couchbase.experimental-span-attributes=true")
-  jvmArgs("-Dotel.instrumentation.common.db-statement-sanitizer.enabled=true")
+
+  // required on jdk17
+  jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
 }
