@@ -63,6 +63,7 @@ dependencies {
 
 tasks.withType<Test>().configureEach {
   // required on jdk17
+  jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
   jvmArgs("--add-opens=java.base/java.lang.invoke=ALL-UNNAMED")
   jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
 
